# prettygraph

./: README.md  main.py  pyproject.toml
prettygraph.egg-info/: PKG-INFO  SOURCES.txt
python_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
