[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "prettygraph"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.2.0",
    "skills>=0.3.0",
    "marvin",
    "python-dotenv>=0.20.0",
]
requires-python = ">=3.10.0"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293"]
