[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "prettygraph"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = ["marvin", "logfire[fastapi]"]
requires-python = ">=3.10.0"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293"]
